# time_series

./: .gitignore  moirai_perplexity.py  vis_uncertainity.ipynb
gift-eval/: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
gift-eval/cli/: analysis.py
gift-eval/notebooks/: chronos.ipynb  dataset.ipynb  feedforward.ipynb  moirai.ipynb  naive.ipynb  sundial.ipynb  tabpfn_ts.ipynb  tfm_ref.ipynb  timesfm.ipynb  timesfm_eval.py  timesfm_prune.ipynb  tirex.ipynb  toto.ipynb  yinglong.ipynb
gift-eval/results/TTM/: all_results.csv
gift-eval/results/TiRex/: all_results.csv  config.json
gift-eval/results/Toto_Open_Base_1.0/: all_results.csv  config.json
gift-eval/results/YingLong_110m/: all_results.csv  config.json
gift-eval/results/YingLong_300m/: all_results.csv  config.json
gift-eval/results/YingLong_50m/: all_results.csv  config.json
gift-eval/results/YingLong_6m/: all_results.csv  config.json
gift-eval/results/chronos_base/: all_results.csv  config.json
gift-eval/results/chronos_bolt_base/: all_results.csv  config.json
gift-eval/results/chronos_bolt_small/: all_results.csv  config.json
gift-eval/results/feedforward/: all_results.csv  config.json
gift-eval/results/moirai_small/: all_results.csv  config.json
gift-eval/results/naive/: all_results.csv  config.json
gift-eval/results/sundial_base_128m/: all_results.csv  config.json
gift-eval/results/tabpfn_ts/: all_results.csv  config.json
gift-eval/results/tempo_ensemble/: all_results.csv  config.json
gift-eval/results/timesfm_2_0_500m/: all_results.csv  config.json
gift-eval/results/toto/: all_results.csv  config.json
gift-eval/results_prune/timesfm_2_0_500m/: all_results.csv
gift-eval/src/: __init__.py
gift-eval/timesfm-local/: .gitattributes  model.safetensors
(+126 files in other folders)
